# nd

./: BUILD.bazel  Example.hs  WORKSPACE  ghc.nix  haskellBaseImageDocker.nix  nixpkgs.nix
package-a/: BUILD.bazel
package-a/src/PackageA/: Mod1.hs  Mod2.hs
package-b/: BUILD.bazel
package-b/src/PackageB/: Mod1.hs  Mod2.hs
